fix(info): do not truncate url

--- a/css/modals/invite/_info.scss
+++ b/css/modals/invite/_info.scss
@@ -38,7 +38,7 @@
     .info-dialog-copy-element {
         opacity: 0;
         pointer-events: none;
-        position: fixed;
+        position: absolute;
         -webkit-user-select: text;
         user-select: text;
     }
@@ -56,11 +56,11 @@
     }
 
     .info-dialog-conference-url {
-        max-width: 250px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        user-select: text;
-        white-space: nowrap;
+        width: max-content;
+        width: -moz-max-content;
+        width: -webkit-max-content;
+        word-break: break-all;
+        max-width: 400px;
     }
 
     .info-dialog-dial-in {
@@ -125,10 +125,6 @@
     justify-content: center;
     width: 100%;
 
-    * {
-        user-select: text;
-    }
-
     .dial-in-numbers-list {
         font-size: 24px;
         margin-top: 20px;
@@ -137,5 +133,14 @@
     .dial-in-conference-id {
         text-align: center;
         width: 30%;
+    }
+}
+
+.info-dialog,
+.dial-in-page {
+    * {
+        user-select: text;
+        -moz-user-select: text;
+        -webkit-user-select: text;
     }
 }
